fixtures/frontend/milestone-2/valid/domain-operator-usage-parameterized/main.aivi
domain Amount A over A
    wrap : A -> Amount A
    (+) : Amount A -> Amount A -> Amount A
    toValue : Amount A -> A
    toValue = amount => amount.carrier

value total : Amount Int = wrap 1 + wrap 2
value raw : Int = toValue total
