fixtures/frontend/milestone-2/invalid/underapplied-domain-constructor/main.aivi
domain ResourceId A over A
    wrap : A -> ResourceId A

type Broken = ResourceId
